[project]
name = "sqlalchemy-async-versioning"
version = "0.1.0"
description = "Automatic versioning for SQLAlchemy models, compatible with AsyncSession (asyncpg)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sa_versioning"]
